src/objects/Apttus_Proposal__Proposal_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>CRM_Code__c</fullName>
        <description>Service code</description>
        <label>CRM Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>97922</fullName>
                </value>
                <value>
                    <fullName>BIOS</fullName>
                </value>
                <value>
                    <fullName>CALLC</fullName>
                </value>
                <value>
                    <fullName>CCO</fullName>
                </value>
                <value>
                    <fullName>CDM</fullName>
                </value>
                <value>
                    <fullName>CDO</fullName>
                </value>
                <value>
                    <fullName>CEVA</fullName>
                </value>
                <value>
                    <fullName>CEVACL</fullName>
                </value>
                <value>
                    <fullName>CEVADMC</fullName>
                </value>
                <value>
                    <fullName>CEVAEAC</fullName>
                </value>
                <value>
                    <fullName>CEVAIRC</fullName>
                </value>
                <value>
                    <fullName>CEVASC</fullName>
                </value>
                <value>
                    <fullName>CIDD</fullName>
                </value>
                <value>
                    <fullName>CLIN</fullName>
                </value>
                <value>
                    <fullName>CLINPCK</fullName>
                </value>
                <value>
                    <fullName>CLINQA</fullName>
                </value>
                <value>
                    <fullName>CLINSPPL</fullName>
                </value>
                <value>
                    <fullName>CONFER</fullName>
                </value>
                <value>
                    <fullName>CONSULT</fullName>
                </value>
                <value>
                    <fullName>CP</fullName>
                </value>
                <value>
                    <fullName>CPM</fullName>
                </value>
                <value>
                    <fullName>CSDD</fullName>
                </value>
                <value>
                    <fullName>DPU</fullName>
                </value>
                <value>
                    <fullName>ECDCM</fullName>
                </value>
                <value>
                    <fullName>ECDMEDS</fullName>
                </value>
                <value>
                    <fullName>ECDPK</fullName>
                </value>
                <value>
                    <fullName>ECDPM</fullName>
                </value>
                <value>
                    <fullName>ECDRM</fullName>
                </value>
                <value>
                    <fullName>ECG</fullName>
                </value>
                <value>
                    <fullName>ECGALY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change_From_Previous__c</fullName>
        <description>CPQ-IQ-LC-14113 : Display a value to show if the line item has changed since the previously accepted and contracted order.</description>
        <inlineHelpText>The type of change for this item from the previous order: Added or Updated.</inlineHelpText>
        <label>Change From Previous</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Updated</fullName>
                </value>
                <value>
                    <fullName>Added</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closeout_Hours__c</fullName>
        <description>Total hours of close out phase of serivce time period</description>
        <defaultValue>0</defaultValue>
        <label>CloseOut Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closeout_Phase__c</fullName>
        <description>Close out phase of serivce time period</description>
        <defaultValue>false</defaultValue>
        <label>Closeout Phase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conduct_Hours__c</fullName>
        <description>Total hours of conduct phase of serivce time period</description>
        <defaultValue>0</defaultValue>
        <label>Conduct Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conduct_Phase__c</fullName>
        <description>Conduct phase of serivce time period</description>
        <defaultValue>false</defaultValue>
        <label>Conduct Phase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Not in use</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>APAC Regional</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>ASEAN Regional</fullName>
                </value>
                <value>
                    <fullName>Asia Mid Markets</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Cayman Islands</fullName>
                </value>
                <value>
                    <fullName>Chad</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Cost_with_Inflation_USD__c</fullName>
        <description>Cost for the service in USD</description>
        <label>Estimated Cost (with Inflation) (USD)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Cost_with_Inflation__c</fullName>
        <description>Cost for the service</description>
        <label>Estimated Cost (with Inflation)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expense_Category__c</fullName>
        <description>Code for the expense</description>
        <label>Expense Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fixed_Price_Expense__c</fullName>
        <description>Type of expense</description>
        <label>Fixed Price Expense</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Passthrough</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hours_per_Unit__c</fullName>
        <description>Service hours per quantity of a service</description>
        <label>Hours per Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IQVIA_Line_Type__c</fullName>
        <description>To differenciate between the PLI if that will be use to sync to opp OR have the details</description>
        <label>IQVIA Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CRM Product</fullName>
                </value>
                <value>
                    <fullName>UPT Task</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Units__c</fullName>
        <description>Denotes the quantity</description>
        <label>Number of Units</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PS_Category_Code__c</fullName>
        <description>Peoplesoft code for the service</description>
        <label>PS Category Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_Res_Type__c</fullName>
        <description>Peoplesoft code for a unit in a service</description>
        <label>PS Res Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACCES</fullName>
                </value>
                <value>
                    <fullName>BIOS</fullName>
                </value>
                <value>
                    <fullName>BONUS</fullName>
                </value>
                <value>
                    <fullName>BSG</fullName>
                </value>
                <value>
                    <fullName>CEVA</fullName>
                </value>
                <value>
                    <fullName>CIDD</fullName>
                </value>
                <value>
                    <fullName>CLNPH</fullName>
                </value>
                <value>
                    <fullName>CLOPS</fullName>
                </value>
                <value>
                    <fullName>CMSVC</fullName>
                </value>
                <value>
                    <fullName>CSDD</fullName>
                </value>
                <value>
                    <fullName>CSMSL</fullName>
                </value>
                <value>
                    <fullName>CTE</fullName>
                </value>
                <value>
                    <fullName>DEPOT</fullName>
                </value>
                <value>
                    <fullName>DIRCP</fullName>
                </value>
                <value>
                    <fullName>DIRCT</fullName>
                </value>
                <value>
                    <fullName>DPU</fullName>
                </value>
                <value>
                    <fullName>DSFTY</fullName>
                </value>
                <value>
                    <fullName>ECG</fullName>
                </value>
                <value>
                    <fullName>EIDET</fullName>
                </value>
                <value>
                    <fullName>EXPEN</fullName>
                </value>
                <value>
                    <fullName>EXPNP</fullName>
                </value>
                <value>
                    <fullName>FINAD</fullName>
                </value>
                <value>
                    <fullName>FLXBD</fullName>
                </value>
                <value>
                    <fullName>FLXBI</fullName>
                </value>
                <value>
                    <fullName>FLXCL</fullName>
                </value>
                <value>
                    <fullName>FLXCM</fullName>
                </value>
                <value>
                    <fullName>FLXDM</fullName>
                </value>
                <value>
                    <fullName>FLXPH</fullName>
                </value>
                <value>
                    <fullName>GCDM</fullName>
                </value>
                <value>
                    <fullName>GLBIT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PS_Sub_Category_Code__c</fullName>
        <description>Peoplesoft code for serivce including unit and task</description>
        <label>PS Sub Category Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Country__c</fullName>
        <description>Pricing country is used to charge the price for a particular service, from where resource is used.</description>
        <label>Pricing Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>APAC Regional</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>ASEAN Regional</fullName>
                </value>
                <value>
                    <fullName>Asia Mid Markets</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Cayman Islands</fullName>
                </value>
                <value>
                    <fullName>Chad</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_Function__c</fullName>
        <description>Group of resource in a pricing country</description>
        <label>Pricing Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Resource__c</fullName>
        <description>Type of Resource in a pricing country</description>
        <label>Pricing Resource</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Requisites__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>LC-12746: This field is used to store related quote requisites id based on study number</description>
        <label>Quote Requisites</label>
        <referenceTo>Quote_Requisites__c</referenceTo>
        <relationshipLabel>Proposal Line Items</relationshipLabel>
        <relationshipName>Proposal_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RM_Resource_Type__c</fullName>
        <description>Defines the resource type for particular service</description>
        <label>RM Resource Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RSU Specialist</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Senior Reviewer</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Qcer</fullName>
                </value>
                <value>
                    <fullName>Lead Oversight</fullName>
                </value>
                <value>
                    <fullName>Medical Writer</fullName>
                </value>
                <value>
                    <fullName>Project Coordinator</fullName>
                </value>
                <value>
                    <fullName>Project Support Specialist</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
                <value>
                    <fullName>Contact Center Analyst</fullName>
                </value>
                <value>
                    <fullName>QA Trainer</fullName>
                </value>
                <value>
                    <fullName>Oversight Group Management Lead</fullName>
                </value>
                <value>
                    <fullName>CEVA Coordinator</fullName>
                </value>
                <value>
                    <fullName>Adjudication Lead</fullName>
                </value>
                <value>
                    <fullName>CEVA Account Oversight</fullName>
                </value>
                <value>
                    <fullName>CEVA Clinical Reviewer</fullName>
                </value>
                <value>
                    <fullName>CEVA Systems Support</fullName>
                </value>
                <value>
                    <fullName>Site Report Specialist</fullName>
                </value>
                <value>
                    <fullName>Standard Monitor AND DTE Site Monitor</fullName>
                </value>
                <value>
                    <fullName>CTA</fullName>
                </value>
                <value>
                    <fullName>Standard Monitor or DTE Site Monitor</fullName>
                </value>
                <value>
                    <fullName>SSV</fullName>
                </value>
                <value>
                    <fullName>Co-monitor</fullName>
                </value>
                <value>
                    <fullName>CML</fullName>
                </value>
                <value>
                    <fullName>CRA</fullName>
                </value>
                <value>
                    <fullName>Programmer</fullName>
                </value>
                <value>
                    <fullName>CM</fullName>
                </value>
                <value>
                    <fullName>CAS</fullName>
                </value>
                <value>
                    <fullName>Data Team Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Res_Mgt_Platform__c</fullName>
        <description>LC-4966: Res Mgt Plaform is a task level information available in Catalog tab of UPT pricing tool and this field will have mapping.</description>
        <label>Res Mgt Platform</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Type__c</fullName>
        <description>Type of revenue</description>
        <label>Revenue Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ad Hoc</fullName>
                </value>
                <value>
                    <fullName>Back Data</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>Defines the RM roles of resource for a particular service</description>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RSU Specialist</fullName>
                </value>
                <value>
                    <fullName>Statistician</fullName>
                </value>
                <value>
                    <fullName>Senior Reviewer</fullName>
                </value>
                <value>
                    <fullName>Programmer</fullName>
                </value>
                <value>
                    <fullName>Medical Writer</fullName>
                </value>
                <value>
                    <fullName>SDTM</fullName>
                </value>
                <value>
                    <fullName>GRIDDS</fullName>
                </value>
                <value>
                    <fullName>Project Coordinator</fullName>
                </value>
                <value>
                    <fullName>Project Support Specialist</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
                <value>
                    <fullName>Contact Center Analyst</fullName>
                </value>
                <value>
                    <fullName>QA Trainer</fullName>
                </value>
                <value>
                    <fullName>Oversight Group Management Lead</fullName>
                </value>
                <value>
                    <fullName>CEVA Coordinator</fullName>
                </value>
                <value>
                    <fullName>Adjudication Lead</fullName>
                </value>
                <value>
                    <fullName>CEVA Account Oversight</fullName>
                </value>
                <value>
                    <fullName>CEVA Clinical Reviewer</fullName>
                </value>
                <value>
                    <fullName>CEVA Systems Support</fullName>
                </value>
                <value>
                    <fullName>CRA</fullName>
                </value>
                <value>
                    <fullName>Site Report Specialist</fullName>
                </value>
                <value>
                    <fullName>CTA</fullName>
                </value>
                <value>
                    <fullName>CML</fullName>
                </value>
                <value>
                    <fullName>CM</fullName>
                </value>
                <value>
                    <fullName>CAS</fullName>
                </value>
                <value>
                    <fullName>Data Team Lead</fullName>
                </value>
                <value>
                    <fullName>Data Operations Coordinator</fullName>
                </value>
                <value>
                    <fullName>Therapeutic Medical Advisor</fullName>
                </value>
                <value>
                    <fullName>Clinical Data Coordinator</fullName>
                </value>
                <value>
                    <fullName>Validation Team Lead</fullName>
                </value>
                <value>
                    <fullName>Lead Build Programmer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAP_Code__c</fullName>
        <description>Unique code of the product</description>
        <label>SAP Code</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Pricing__c</fullName>
        <description>CPQ-IQ-LC-12675: Used to identify rate card account based pricing applied or not.</description>
        <label>Special Pricing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sale_Type__c</fullName>
        <description>Type of the Sale</description>
        <label>Sale Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Repeat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Selected_ATC_OTC_Codes__c</fullName>
		<description>LC-9460 To Store Selected ATC OTC Hierarchy Codes for Market Share in Quote.</description>
        <inlineHelpText>Separated by Semicolon</inlineHelpText>
        <label>Selected ATC/OTC Codes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Startup_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <description>total hours of startup phase of serivce time period</description>
        <label>Startup Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Startup_Phase__c</fullName>
        <description>Startup phase of serivce time period</description>
        <defaultValue>false</defaultValue>
        <label>Startup Phase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Std_Price_w_Infl_USD__c</fullName>
        <description>Total price to charge with inflation in USD</description>
        <label>Std Price w/ Infl. (USD)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Std_Price_w_Infl__c</fullName>
        <description>Total price to charge with inflation</description>
        <label>Std Price w/ Infl.</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Study_Number__c</fullName>
        <description>CPQ-IQ-LC-12834: This is used to store Study Number.</description>
        <label>Study Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <description>Total number of hours for that service</description>
        <label>Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Price_w_Inflation_Bid_USD__c</fullName>
        <description>Total price to charge with inflation in bid currency</description>
        <label>Total Price w/ Inflation (Bid) USD</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Price_w_Inflation_Bid__c</fullName>
        <description>Total price to charge with inflation</description>
        <label>Total Price w/ Inflation</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unique_Agreement_Line__c</fullName>
        <description>Sequential number of line item</description>
        <label>Unique Agreement Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Code_Without_Country_Code__c</fullName>
        <description>Unique value for each service</description>
        <formula>LEFT(Unit_Code__c, FIND(&apos;_&apos;,  Unit_Code__c  , 6) - 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit_Code_Without_Country_Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Code__c</fullName>
        <description>Unique value for each service with country</description>
        <label>Unit Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Name__c</fullName>
        <description>Name fo the service</description>
        <label>Unit Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <description>Selling term of the service</description>
        <label>Unit of Measure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gross_Margin__c</fullName>
        <description>Should be auto populated from Cart</description>
        <inlineHelpText>Should be auto populated from Cart</inlineHelpText>
        <label>Gross Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pass_Through__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should be auto populated from Cart</description>
        <inlineHelpText>Should be auto populated from Cart</inlineHelpText>
        <label>Pass Through</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_Price__c</fullName>
        <description>CPQ-IQ-LC-12314: This is used to store pruchase(cost) price.</description>
        <label>Cost Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Budget_hours__c</fullName>
        <description>CPQ-IQ-LC-14866: This is used to store total budget hours</description>
        <label>Total Budget hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budgeted_Units__c</fullName>
        <description>CPQ-IQ-LC-14866: This is used to store budget units</description>
        <label>Budgeted Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Net_Price__c</fullName>
        <description>CPQ-LC-15623: Field to capture the Line Item Net Price from previous Accepted Quote.</description>
        <label>Previous Net Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Quantity__c</fullName>
        <description>CPQ-LC-15623: Field to capture the Line Item Quantity from previous Accepted Quote.</description>
        <label>Previous Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
        </fields>
    <label>Proposal Line Item</label>
    <nameField>
        <displayFormat>QL-{0000000000}</displayFormat>
        <label>Line Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposal Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>